--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,9 @@ default: &default
 development:
   <<: *default
   database: plan_and_go_development
+  username: postgres  # or whatever your role is
+  password: yourpassword  # optional, but usually needed
+  host: localhost
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
